Add Google authentication and externalize secrets